

name:                LETREC
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:             
license:             MIT
license-file:        LICENSE
author:               
maintainer:           
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable LETREC
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
